<resources>
    <string name="app_name">My Farm Shop</string>

    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="menu_option_1">Browse Farms</string>
    <string name="menu_option_2">Search a Product</string>
    <string name="menu_option_3">Search a Farm</string>
    <string name="menu_option_4">Special Offers</string>
    <string name="fragment_1_title">Fragment 1</string>
    <string name="fragment_2_title">Farms</string>
    <string name="fragment_3_title">Fragment 3</string>
    <string name="fragment_4_title">Special Offers</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="search">Search</string>
    <string name="todo">TODO</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="web">Web</string>
    <string name="city">City</string>
    <string name="provice">Provice</string>
    <string name="product">Product</string>
    <string name="url">Url</string>
    <string name="farmpicture">FarmPicture</string>

</resources>