<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textAppearance="?attr/textAppearanceListItem"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/name"
            android:layout_marginBottom="-37dp"
            android:text="@string/address"
            android:textAppearance="?attr/textAppearanceListItem" />

        <TextView
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/address"
            android:layout_marginBottom="-37dp"
            android:text="@string/phone"
            android:textAppearance="?attr/textAppearanceListItem" />

        <TextView
            android:id="@+id/web"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/phone"
            android:layout_marginBottom="-37dp"
            android:text="@string/web"
            android:textAppearance="?attr/textAppearanceListItem" />

        <TextView
            android:id="@+id/city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/web"
            android:layout_marginBottom="-37dp"
            android:text="@string/city"
            android:textAppearance="?attr/textAppearanceListItem" />

        <TextView
            android:id="@+id/province"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/city"
            android:layout_marginBottom="-37dp"
            android:text="@string/provice"
            android:textAppearance="?attr/textAppearanceListItem" />

        <TextView
            android:id="@+id/product"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/province"
            android:layout_marginBottom="-37dp"
            android:text="@string/product"
            android:textAppearance="?attr/textAppearanceListItem" />

        <TextView
            android:id="@+id/url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/product"
            android:layout_marginBottom="-37dp"
            android:text="@string/url"
            android:textAppearance="?attr/textAppearanceListItem" />

    </RelativeLayout>

</LinearLayout>